force-app/main/default/objects/Event_Production_Details__c/Event_Production_Details__c.object-meta.xml
<CustomObject>
    <label>Event Production Details</label>
    <nameField>
        <displayFormat>EPD-{0000}</displayFormat>
        <label>Event Product Details #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Production Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>