force-app/main/default/objects/Event_Production_Details__c/fields/AdobeRoomPreferences__c.field-meta.xml
<CustomField>
    <fullName>AdobeRoomPreferences__c</fullName>
    <inlineHelpText>Pods Used, Positioning, etc</inlineHelpText>
    <label>Adobe Room Preferences</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>