force-app/main/default/objects/Event_Production_Details__c/fields/Auditorium__c.field-meta.xml
<CustomField>
    <fullName>Auditorium__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auditorium</label>
    <type>Checkbox</type>
</CustomField>