force-app/main/default/objects/Event_Production_Details__c/fields/C2J__c.field-meta.xml
<CustomField>
    <fullName>C2J__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C2J</label>
    <type>Checkbox</type>
</CustomField>