force-app/main/default/objects/Event_Production_Details__c/fields/EventCenter__c.field-meta.xml
<CustomField>
    <fullName>EventCenter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Event Center</label>
    <type>Checkbox</type>
</CustomField>