force-app/main/default/objects/Event_Production_Details__c/fields/Meeting_Setup__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Setup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Meeting Setup</label>
    <type>Checkbox</type>
</CustomField>