force-app/main/default/objects/Event_Production_Details__c/fields/PanelistLogin__c.field-meta.xml
<CustomField>
    <fullName>PanelistLogin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Panelist Login</label>
    <type>Checkbox</type>
</CustomField>