force-app/main/default/objects/Event_Production_Details__c/fields/PasswordUsed__c.field-meta.xml
<CustomField>
    <fullName>PasswordUsed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Password Used</label>
    <type>Checkbox</type>
</CustomField>