force-app/main/default/objects/Event_Production_Details__c/fields/PGi_Client__c.field-meta.xml
<CustomField>
    <fullName>PGi_Client__c</fullName>
    <label>PGi Client</label>
    <referenceTo>PGi_Client__c</referenceTo>
    <relationshipLabel>Event Production Details</relationshipLabel>
    <relationshipName>Event_Production_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>