force-app/main/default/objects/Event_Production_Details__c/fields/Polling__c.field-meta.xml
<CustomField>
    <fullName>Polling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Polling</label>
    <type>Checkbox</type>
</CustomField>