force-app/main/default/objects/Event_Production_Details__c/fields/Post_Conference_Deliverables__c.field-meta.xml
<CustomField>
    <fullName>Post_Conference_Deliverables__c</fullName>
    <label>Post Conference Deliverables</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>