force-app/main/default/objects/Event_Production_Details__c/fields/Q_A__c.field-meta.xml
<CustomField>
    <fullName>Q_A__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Q&amp;A</label>
    <type>Checkbox</type>
</CustomField>