force-app/main/default/objects/Event_Production_Details__c/fields/Rehearsal__c.field-meta.xml
<CustomField>
    <fullName>Rehearsal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rehearsal</label>
    <type>Checkbox</type>
</CustomField>