force-app/main/default/objects/Event_Production_Details__c/fields/RoomPreferences__c.field-meta.xml
<CustomField>
    <fullName>RoomPreferences__c</fullName>
    <label>Room Preferences</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>