force-app/main/default/objects/Event_Production_Details__c/fields/Setup_Notes__c.field-meta.xml
<CustomField>
    <fullName>Setup_Notes__c</fullName>
    <label>Setup Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>