force-app/main/default/objects/Event_Production_Details__c/recordTypes/Adobe.recordType-meta.xml
<RecordType>
    <fullName>Adobe</fullName>
    <active>true</active>
    <label>Adobe</label>
</RecordType>