force-app/main/default/objects/Event_Production_Details__c/recordTypes/GlobalMeet_Operator_Assisted.recordType-meta.xml
<RecordType>
    <fullName>GlobalMeet_Operator_Assisted</fullName>
    <active>true</active>
    <label>GlobalMeet Operator Assisted</label>
</RecordType>