force-app/main/default/objects/Event_Production_Details__c/recordTypes/GlobalMeet_Webcast.recordType-meta.xml
<RecordType>
    <fullName>GlobalMeet_Webcast</fullName>
    <active>true</active>
    <label>GlobalMeet Webcast</label>
</RecordType>