force-app/main/default/objects/Event_Production_Details__c/recordTypes/GlobalMeet_Webinar.recordType-meta.xml
<RecordType>
    <fullName>GlobalMeet_Webinar</fullName>
    <active>true</active>
    <label>GlobalMeet Webinar</label>
</RecordType>