force-app/main/default/objects/Event_Production_Details__c/recordTypes/Slide_Assist.recordType-meta.xml
<RecordType>
    <fullName>Slide_Assist</fullName>
    <active>true</active>
    <label>Slide Assist</label>
</RecordType>