force-app/main/default/objects/Event_Production_Details__c/recordTypes/WebEx.recordType-meta.xml
<RecordType>
    <fullName>WebEx</fullName>
    <active>true</active>
    <label>WebEx</label>
</RecordType>